--- a/.github/workflow/actions.yml
+++ b/.github/workflow/actions.yml
@@ -5,8 +5,9 @@ jobs:
   check-bats-version:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/OpenJDK@v17
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '14'
+			- uses: actions/checkout@v4
+			- uses: actions/setup-java@v4
+  			with:
+    			distribution: 'oracle' # See 'Supported distributions' for available options
+    			java-version: '17'
       - run: ./gradlew
