--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -5,9 +5,9 @@ jobs:
   check-bats-version:
     runs-on: ubuntu-latest
     steps:
-			- uses: actions/checkout@v4
-			- uses: actions/setup-java@v4
+		- uses: actions/checkout@v4
+		- uses: actions/setup-java@v4
   			with:
     			distribution: 'oracle' # See 'Supported distributions' for available options
     			java-version: '17'
-      - run: ./gradlew
+      	- run: ./gradlew build
