--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -5,9 +5,11 @@ jobs:
 		runs-on: ubuntu-latest
 		steps:
 		- uses: actions/checkout@v4
-	        - uses: actions/setup-java@v4
-  		with:
-    	distribution: 'oracle' # See 'Supported distributions' for available options
-    	java-version: '17'
+		- uses: actions/setup-java@v4
+		  with:
+			distribution: 'oracle' # See 'Supported distributions' for available options
+			java-version: '17'
+		  name: "Gradle"
 		- run: ./gradlew
-    	- run: ./gradlew build
+		  name: "Build"
+		- run: ./gradlew build
