--- a/.github/workflows/xint.yml
+++ b/.github/workflows/xint.yml
@@ -10,5 +10,7 @@ jobs:
       uses: actions/checkout@v4
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v3
+    - name: Gradle
+    	run: ./gradlew
     - name: Build with Gradle
       run: ./gradlew build
