--- a/.github/workflows/xint.yml
+++ b/.github/workflows/xint.yml
@@ -10,6 +10,11 @@ jobs:
       uses: actions/checkout@v4
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v3
+    - name: Setup Java
+      uses: actions/setup-java@v4
+      with: 
+        distribution: 'oracle'
+        java-version: '17'
     - name: Gradle
       run: ./gradlew
     - name: Build with Gradle
