--- a/.github/workflows/xint.yml
+++ b/.github/workflows/xint.yml
@@ -15,6 +15,8 @@ jobs:
       with: 
         distribution: 'oracle'
         java-version: '17'
+    - name: Chmod
+      run: chmod 777 ./gradlew
     - name: Gradle
       run: ./gradlew
     - name: Build with Gradle
