--- a/build.gradle
+++ b/build.gradle
@@ -179,7 +179,7 @@ publishing {
     }
         maven {
             name = "GitHubPackages"
-            url = "https://maven.pkg.github.com/yituodab/wand"
+            url = "https://github.com/yituodab/wand"
             credentials {
               username = System.getenv("GITHUB_ACTOR")
               password = System.getenv("GITHUB_TOKEN")
