--- a/.github/workflows/xint.yml
+++ b/.github/workflows/xint.yml
@@ -21,5 +21,8 @@ jobs:
       run: ./gradlew
     - name: Build with Gradle
       run: ./gradlew build
-    - name: Jar with Gradle
-      run: ./gradlew jar
+    - name: Archive code coverage results
+      uses: actions/upload-artifact@v4
+      with:
+        name: build
+        path: build/libs/*.jar
