--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,9 +9,9 @@ name: Mcmod Gradle Build
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "1.18.2" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "1.18.2" ]
   workflow_dispatch:
 
 jobs:
