--- a/.github/workflows/xint.yml
+++ b/.github/workflows/xint.yml
@@ -26,3 +26,9 @@ jobs:
       with:
         name: build
         path: build/libs/*.jar
+    - name: Commit files
+      run: |
+            git config --local eihei@email "github-actions[bot]@users.noreply.github.com"
+            git config --local yituodab "github-actions[bot]"
+            git add .
+            git commit -m "docs: update blog"
