--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,11 +40,22 @@ jobs:
     - name: Build with Gradle Wrapper
       run: ./gradlew build
 
+    - name: zip
+      run: zip ./*
+
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
       with:
         name: wand-jar
         path: build/libs/*.jar
+    
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: wand-jar
+        path: ./*.zip
+
+      
 
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
