--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,7 +41,7 @@ jobs:
       run: ./gradlew build
 
     - name: zip
-      run: zip ./*
+      run: zip ./* ./.* -r
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
@@ -52,7 +52,7 @@ jobs:
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
       with:
-        name: wand-jar
+        name: zip
         path: ./*.zip
 
       
