--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,7 +41,7 @@ jobs:
       run: ./gradlew build
 
     - name: zip
-      run: zip ./* ./.* -r
+      run: zip ./* ./.*
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
