--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,7 +41,11 @@ jobs:
       run: ./gradlew build
 
     - name: zip
-      run: zip .
+      run: |
+            git config --local user.email "github-actions[bot]@users.noreply.github.com"
+            git config --local user.name "github-actions[bot]"
+            git add .
+            git commit -m "docs: update blog"
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
