--- a/build.gradle
+++ b/build.gradle
@@ -174,9 +174,20 @@ publishing {
     }
     repositories {
         maven {
-            url "file://${project.projectDir}/mcmodsrepo"
+        url "file://${project.projectDir}/mcmodsrepo"
         }
     }
+}
+
+repositories {
+    maven {
+        name = 'GeckoLib'
+        url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' 
+    }
+}
+
+dependencies {
+        implementation fg.deobf('software.bernie.geckolib:geckolib-forge-1.19:3.1.40')
 }
 
 tasks.withType(JavaCompile).configureEach {
